--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>weddinginvitation</title>
+    
+    <title>Trân trọng kính mời dự Lễ Thành Hôn của Chúng Mình</title>
+    <meta name="description" content="Sự hiện diện của quý khách là niềm vinh dự lớn nhất đối với gia đình chúng tôi." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wedding-trung-lanh.vercel.app/" /> <meta property="og:title" content="Trân trọng kính mời dự Lễ Thành Hôn" />
+    <meta property="og:description" content="Sự hiện diện của quý khách là niềm vinh dự lớn nhất đối với gia đình chúng tôi." />
+
+    <meta property="og:image" content="/assets/couple/11.jpg" /> 
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Trân trọng kính mời dự Lễ Thành Hôn" />
+    <meta property="twitter:description" content="Sự hiện diện của quý khách là niềm vinh dự lớn nhất." />
+    <meta property="twitter:image" content="/wedding-thumbnail.jpg" />
   </head>
   <body>
     <div id="root"></div>
